[package]
name = "hr_docpull"
version = "0.1.0"
edition = "2021"
authors = ["Matthias Stangl <matthias.stangl95@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["env", "derive"] }
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
